# express-docker

./: README.md
agent/: .gitignore  Dockerfile  README.md  pyproject.toml
agent/app/: main.py
server/: .gitignore  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
server/src/: index.ts
server/src/rooms/: connection.ts
server/src/utils/: env.ts  logger.ts
web/: .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts
web/src/: index.css  index.tsx
web/src/views/: App.tsx
web/src/views/home/: index.tsx  session.tsx  video.tsx
